Improved look and feel or the navigation. Still needs work. I also started working on a rough idea of the main header. We want to make sure when this page collapses down, that the quality of the page is not compromised.

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,34 @@
-.nav-bar-custom{
-    padding: 15px;   
-    margin-bottom: 0;
-    
+/* Collapsing Navbar Styles */
+
+@media(min-width:768px) {
+  .navbar-default {
+    -webkit-transition: all .35s;
+    -moz-transition: all .35s;
+    transition: all .35s;
+    padding: 15px 0;
+    /* UNCOLLAPSED state */
+  }
+  .navbar-default.affix {
+    padding: 0;
+    /*COLLAPSED state */
+  }
 }
 
-#start-nav{
-    margin-left:40px;
+
+
+
+header {
+  padding: 250px;
+  text-align: left;
+  background-image: url(resources/hero-image.jpg);
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
 }
 
-#btn-log-in{
-    margin-left: 35px;
-    margin-right: 75px;
+header h1 {
+  color: white;
+  font-size: 2.5em;
 }
